Fixed Layout Issues and added Svg Logo

--- a/webcomponents/src/app/form/Form.module.css
+++ b/webcomponents/src/app/form/Form.module.css
@@ -70,7 +70,7 @@
 	color: white;
 	text-transform: uppercase;
 	font-size: 9px;
-	width: 33.33%;
+	width: 30%;
 	float: left;
 	position: relative;
 }
@@ -171,9 +171,7 @@
 @media screen and (max-width: 805px) {
 
 .msform {
-	width: 400px;
+	width: 94%;
 }
-.msform input, .msform textarea {
-    padding: 15px;
-}
+
 }
