--- a/webcomponents/src/app/layout/Layout.module.css
+++ b/webcomponents/src/app/layout/Layout.module.css
@@ -1,5 +1,3 @@
-.pagewrapper {
-}
 
 .picturecarousel {
     display:flex;
@@ -42,14 +40,16 @@
     font-family: sans-serif;
     text-align: center;
     color: #FBFBFB ;
-    width: 100%;
+    width: 80%;
     position: absolute;
+
 }
 
 .hrcarousel {
-    width: 80%;
+    width: 100%;
     color: #FBFBFB ;
     position: absolute;
+    justify-content: center;
 }
 
 .pcarousel {
@@ -60,6 +60,9 @@
     color: #FBFBFB ;
     width: 100%;
     position: absolute;
+    justify-content: center;
+
+
   }
 
 .buttonwrapper {
@@ -141,12 +144,8 @@
     height:80vh;
 
 }
-.picturecontainer{
-    flex-flow: column wrap;
-    height:80vh;
-    margin-left: 5%;
-}
 .infotext{
+    margin-top: 20%;
     flex-flow: column wrap;
     font-family: sans-serif;
     line-height: 1.5;
@@ -157,11 +156,10 @@
 }
 
 .verticalbar {
-    width: auto;
     height: 240px;
     position: absolute;
-    margin-top: 200px;
-    margin-left: 80%;
+    margin-left: 50%;
+    transform: translateY(-12vh);
 }
 .formcontainer{
     width: 100%;
@@ -178,7 +176,6 @@
 }
 
 .tilecontainer{
-    
     width:100%;
     height: 660px;
     background:#4F4A41;
@@ -186,7 +183,7 @@
 
 .productinfo{
     float: left;
-    width: 86%;
+    width: 85%;
     height: 576px;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
     background:#6E6658;
@@ -194,10 +191,7 @@
 
 .backgroundcontainer{
     float: left;
-    width: 144px;
     height: 660px;
-    background-image: url("data:image/svg+xml,%3Csvg version='1.0' xmlns='http://www.w3.org/2000/svg' width='288.000000pt' height='660.000000pt' viewBox='0 0 288.000000 660.000000' preserveAspectRatio='xMidYMid meet'%3E%3Cg transform='translate(0.000000,660.000000) scale(0.100000,-0.100000)'%0Afill='%23222222' stroke='none'%3E%3Cpath d='M0 3275 l0 -3275 1440 0 1440 0 0 3275 0 3275 -1440 0 -1440 0 0%0A-3275z m2810 1659 c0 -850 -4 -1544 -8 -1542 -11 4 -2656 3065 -2660 3078 -2%0A7 470 10 1332 10 l1336 0 0 -1546z m-1385 -75 c737 -853 1342 -1555 1343%0A-1560 2 -6 -135 -8 -359 -7 l-363 3 -987 1110 -987 1110 -1 448 c-1 246 2 447%0A7 447 4 0 610 -698 1347 -1551z m-421 -507 c506 -571 921 -1043 924 -1050 3%0A-9 -73 -12 -350 -12 l-353 1 -577 631 -578 632 0 418 c0 230 3 418 8 417 4 0%0A421 -467 926 -1037z m-398 -477 c280 -305 510 -562 512 -570 3 -13 -43 -15%0A-365 -15 l-368 1 -157 172 -157 172 -1 398 c0 332 2 397 14 397 7 0 243 -250%0A522 -555z m-418 -460 c50 -55 92 -106 92 -112 0 -10 -28 -13 -105 -13 l-105 0%0A0 116 c0 90 3 115 13 112 7 -2 54 -48 105 -103z m112 -197 c0 -17 -201 -218%0A-217 -218 -10 0 -13 29 -13 115 l0 115 115 0 c84 0 115 -3 115 -12z m818 -3%0Ac-5 -22 -1019 -1125 -1035 -1125 -11 0 -13 75 -13 397 l0 398 172 172 173 173%0A353 0 c308 0 353 -2 350 -15z m832 1 c0 -16 -1848 -2070 -1867 -2074 -11 -3%0A-13 70 -13 411 l0 415 578 631 577 630 363 1 c298 0 362 -2 362 -14z m818 1%0Ac-5 -22 -2671 -3077 -2685 -3077 -11 0 -13 79 -13 441 l0 441 992 1103 993%0A1104 358 0 c288 1 358 -2 355 -12z m42 -1617 l0 -1530 -1336 0 c-1177 0 -1335%0A2 -1332 15 5 23 2639 3045 2655 3045 11 0 13 -258 13 -1530z'/%3E%3C/g%3E%3C/svg%3E%0A");
-    background-size: 72px 165px;
     background-repeat: repeat;
 }
 
@@ -222,15 +216,20 @@
         margin-right: 25%;
         width: 50%;
     }    
-    .picturecontainer{
-        margin-left: 25%;
-        margin-right: 25%;
+    .tilecontainer{
+        height: 330px;
     }
-    .picturecarousel>img {
-        height: 50%;
-        width: 100%;
+    .productinfo{
+
+        height: 302px;
+
     }
     
+    .backgroundcontainer{
+
+        height: 330px;
+
+    }    
 
 }
 @media screen and (max-width: 805px) {
@@ -247,14 +246,6 @@
         height:40vh;
     
     }
-    .picturecontainer{
-        height:40vh;
-        margin-left: auto;
-        margin-right: auto;  
-    }
-    .picturecarousel {
-        height: 25vh;
-    } 
 
 
 }
